--- a/ProyectoFinalProgra2/ControlParqueo.csproj
+++ b/ProyectoFinalProgra2/ControlParqueo.csproj
@@ -47,6 +47,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conexion.cs" />
+    <Compile Include="Controladores\CarroControlador.cs" />
+    <Compile Include="Controladores\ICrud.cs" />
+    <Compile Include="Controladores\ParqueoAutoControlador.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -71,8 +74,14 @@
     <Compile Include="Formularios\Parqueo\IngresoCarro.Designer.cs">
       <DependentUpon>IngresoCarro.cs</DependentUpon>
     </Compile>
+    <Compile Include="Formularios\Parqueo\SalidaCarro.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formularios\Parqueo\SalidaCarro.Designer.cs">
+      <DependentUpon>SalidaCarro.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Modelos\AutoParqueo.cs" />
     <Compile Include="Modelos\Carro.cs" />
-    <Compile Include="Modelos\ClassParqueo.cs" />
     <Compile Include="Modelos\Parqueo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -87,6 +96,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Formularios\Parqueo\IngresoCarro.resx">
       <DependentUpon>IngresoCarro.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formularios\Parqueo\SalidaCarro.resx">
+      <DependentUpon>SalidaCarro.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
